TDD Category: EmptyName, NameLengthLessThan3, NameLengthMoreThan255